# adktry

./: .gitignore  README.md  pyproject.toml
10_adk_proj/agent_app/: README.md  agent.py
10_adk_proj/basic_agent/: agent.py
10_adk_proj/basic_ollama_agent/: agent.py
10_adk_proj/llm_auditor/: README.md  agent.py
10_adk_proj/llm_auditor/sub_agents/critic/: __init__.py  agent.py  prompt.py
10_adk_proj/llm_auditor/sub_agents/reviser/: __init__.py  agent.py  prompt.py
20_tools/crewai_tool_agent/: agent.py
20_tools/function_tool_agent/: agent.py
20_tools/langchain_tool_agent/: agent.py
30_multiagent/parent_and_subagents/: README.md  agent.py
30_multiagent/workflow_agents/: agent.py
multi_tool_agent/: README.md  agent.py  dot.env.sample
wthr_team/: agent.py
